--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -873,3 +873,20 @@
 	file = {Full Text:/Users/cwrs/Zotero/storage/43QWFPCV/Purchase et al. - 2020 - Understanding Failure Modes of NSFANSI 53 Lead-Ce.pdf:application/pdf},
 }
 
+
+@article{gigault_asymmetrical_2017,
+	title = {Asymmetrical flow field flow fractionation methods to characterize submicron particles: application to carbon-based aggregates and nanoplastics},
+	volume = {409},
+	issn = {1618-2642, 1618-2650},
+	shorttitle = {Asymmetrical flow field flow fractionation methods to characterize submicron particles},
+	url = {http://link.springer.com/10.1007/s00216-017-0629-7},
+	doi = {10.1007/s00216-017-0629-7},
+	language = {en},
+	number = {29},
+	urldate = {2022-08-18},
+	journal = {Analytical and Bioanalytical Chemistry},
+	author = {Gigault, Julien and El Hadri, Hind and Reynaud, Stéphanie and Deniau, Elise and Grassl, Bruno},
+	month = nov,
+	year = {2017},
+	pages = {6761--6769},
+}
