--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -359,7 +359,7 @@
 	number = {4},
 	urldate = {2022-05-18},
 	journal = {Analytical Chemistry},
-	author = {Litzen, Anne.},
+	author = {Anne Litzen},
 	month = feb,
 	year = {1993},
 	pages = {461--470},
@@ -602,7 +602,7 @@
 	journal = {Soil Research},
 	author = {McKenzie, Rm},
 	year = {1980},
-	pages = {61},
+	pages = {61--73},
 }
 
 
@@ -869,7 +869,9 @@
 	author = {Purchase, Jeannie M. and Rouillier, Rusty and Pieper, Kelsey J. and Edwards, Marc},
 	month = dec,
 	year = {2020},
-	pages = {acs.estlett.0c00709},
+	volume = {8},
+	issue = {2},
+	pages = {155--160},
 	file = {Full Text:/Users/cwrs/Zotero/storage/43QWFPCV/Purchase et al. - 2020 - Understanding Failure Modes of NSFANSI 53 Lead-Ce.pdf:application/pdf},
 }
 
